--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "author": "Hugo Belot-Deloro",
   "license": "ISC",
   "dependencies": {
+    "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.0"
+  },
+  "devDependencies": {
+    "prettier": "^3.0.3",
+    "prettier-plugin-astro": "^0.12.1"
   }
 }
