--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
   "author": "Hugo Belot-Deloro",
   "license": "ISC",
   "dependencies": {
+    "@astrojs/mdx": "^1.1.3",
     "@astrojs/rss": "^3.0.0",
-    "astro": "^3.4.0"
+    "astro": "^3.4.0",
+    "katex": "^0.16.9"
   },
   "devDependencies": {
+    "@astrojs/check": "^0.2.1",
+    "@types/katex": "^0.16.5",
     "prettier": "^3.0.3",
-    "prettier-plugin-astro": "^0.12.1"
+    "prettier-plugin-astro": "^0.12.1",
+    "typescript": "^5.2.2"
   }
 }
