--- a/package.json
+++ b/package.json
@@ -20,6 +20,14 @@
   "devDependencies": {
     "@astrojs/check": "^0.2.1",
     "@types/katex": "^0.16.5",
+    "@typescript-eslint/eslint-plugin": "^6.9.1",
+    "@typescript-eslint/parser": "^6.9.1",
+    "eslint": "^8.52.0",
+    "eslint-config-standard-with-typescript": "^39.1.1",
+    "eslint-plugin-astro": "^0.29.1",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-n": "^16.2.0",
+    "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
     "typescript": "^5.2.2"
