--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@astrojs/mdx": "^1.1.3",
     "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.0",
+    "astro-icon": "^0.8.1",
     "katex": "^0.16.9"
   },
   "devDependencies": {
