--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-astro": "^0.29.1",
     "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
     "prettier": "^3.0.3",
