--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-mdx": "^2.2.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
     "typescript": "^5.2.2"
