--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.1",
+    "react": "^18.2.0",
     "typescript": "^5.2.2"
   }
 }
