--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.0",
     "astro-icon": "^0.8.1",
-    "katex": "^0.16.9"
+    "katex": "^0.16.9",
+    "mdast-util-to-string": "^4.0.0",
+    "reading-time": "^1.5.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.2.1",
