--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "@astrojs/rss": "^3.0.0",
     "astro": "^3.4.0",
     "astro-icon": "^0.8.1",
-    "katex": "^0.16.9",
     "mdast-util-to-string": "^4.0.0",
-    "reading-time": "^1.5.0"
+    "reading-time": "^1.5.0",
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@astrojs/check": "^0.2.1",
