--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "astro-icon": "^0.8.1",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.1.0",
     "rehype-katex": "^7.0.0",
+    "rehype-slug": "^6.0.0",
     "remark-math": "^6.0.0"
   },
   "devDependencies": {
