--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
+    "rehype-external-links": "^3.0.0",
     "rehype-katex": "^7.0.0",
     "rehype-slug": "^6.0.0",
     "remark-math": "^6.0.0"
