--- a/package.json
+++ b/package.json
@@ -12,10 +12,11 @@
   "author": "Hugo Belot-Deloro",
   "license": "ISC",
   "dependencies": {
-    "@astrojs/mdx": "^1.1.3",
-    "@astrojs/rss": "^3.0.0",
-    "astro": "^3.4.0",
-    "astro-icon": "^0.8.1",
+    "@astrojs/mdx": "^2.1.1",
+    "@astrojs/rss": "^4.0.5",
+    "@iconify-json/feather": "^1.1.8",
+    "astro": "^4.3.5",
+    "astro-icon": "^1.1.0",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
@@ -25,7 +26,7 @@
     "remark-math": "^6.0.0"
   },
   "devDependencies": {
-    "@astrojs/check": "^0.2.1",
+    "@astrojs/check": "^0.4.1",
     "@types/katex": "^0.16.5",
     "@typescript-eslint/eslint-plugin": "^6.9.1",
     "@typescript-eslint/parser": "^6.9.1",
