--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@astrojs/mdx": "^2.1.1",
     "@astrojs/rss": "^4.0.5",
+    "@astrojs/sitemap": "^3.1.1",
     "@fontsource/ubuntu": "^5.0.12",
     "@iconify-json/feather": "^1.1.8",
     "astro": "^4.3.5",
