--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify-json/feather": "^1.1.8",
     "astro": "^4.3.5",
     "astro-icon": "^1.1.0",
+    "astro-seo": "^0.8.3",
     "mdast-util-to-string": "^4.0.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
